# ultralearn

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  Trunk.toml  index.html  package-lock.json  package.json  renovate.json  vercel.json
.github/workflows/: ci.yml
docs/: MIGRATION.md
public/: manifest.webmanifest  sw.js
public/styles/: components.css
src/: App.vue  app.rs  lib.rs  style.css
src/components/: ChecklistSection.vue  NotesSection.vue  mod.rs
src/components/activities/: ExperimentTracker.vue  FeedbackLog.vue  FeynmanWorkspace.vue  FlashcardSection.vue  PomodoroTimer.vue  RetentionSchedule.vue  checklist_section.rs  experiment_tracker.rs  feedback_log.rs  feynman_workspace.rs  flashcard_section.rs  mod.rs  notes_section.rs  pomodoro_timer.rs  retention_schedule.rs
src/components/common/: mod.rs
src/components/icons/: mod.rs
src/components/layout/: mod.rs
src/composables/: mod.rs  use_timer.rs
src/core/: error.rs  mod.rs  sanitize.rs  theme.rs  time.rs  utils.rs
src/core/types/: mod.rs  principle.rs  principles_data.rs
src/router/: index.ts
src/stores/: mod.rs  plan.rs  plan.ts
src/types/: principle.ts  principles-data.ts
src/views/: LandingView.vue  PlanOverview.vue  PrincipleDetail.vue  landing.rs  mod.rs  plan_overview.rs  principle_detail.rs
